--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Principios Básicos JS</title>
     <link rel="stylesheet" href="css/estilos.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 </head>
 
 <body>
@@ -15,15 +18,43 @@
         <div class="logo-container">
             <img src="img/logo.svg" alt="logo">
         </div>
-        <button id="boton" class="boton"> Click</button>
+        <button id="boton" onclick="cambiarColor()" type="button" class="btn btn-warning my-2"> Click</button>
+        <p class="parrafos">Este es un un parrafo de ejemplo</p>
     </header>
 
+    
+
+    <div>
+
+        <!-- <img src="https://images.unsplash.com/photo-1509114397022-ed747cca3f65?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1035&q=80" id="imagen" width="300px"> -->
+
+    </div>
     <!-- <script src="js/01-let-const.js"></script> -->
     <!-- <script src="js/02-template-string.js"></script> -->
     <!-- <script src="js/03-objetos-literales.js"></script> -->
     <!-- <script src="js/04-arreglos.js"></script> -->
-    <script src="js/05-funciones.js"></script>
-    
+    <!-- <script src="js/05-funciones.js"></script> -->
+    <!-- <script src="js/06-destructuracion-objetos.js"></script> -->
+    <!-- <script src="js/07-destructuracion-arreglos.js"></script> -->
+    <!-- <script src="js/08-import-export.js" type="module"></script> -->
+
+    <!-- <script src="js/09-promesa.js" type="module"></script> -->
+    <!-- <script src="js/09-Tareas.js" type="module"></script> -->
+
+    <!-- <script src="js/10-fech-api.js" ></script> -->
+    <!-- <script src="js/11-operador-ternario.js" ></script> -->
+    <script src="js/12-dom.js"></script>
+
+
+
+    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+        crossorigin="anonymous"></script>
 
 </body>
+
 </html>
